[package]
name = "mod_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
time = { version = "0.3", features = ["serde", "parsing"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
sha1 = "0.10"
regex = "1.10"
dunce = "1.0"

text_io = "0.1" # temp for debug purposes